# batchcooking_app_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  compose.yml  main.py  pyproject.toml
app/: main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 2025_06_07_1651-d21ba43ab185_create_user_table.py
app/api/: main.py
app/core/: config.py  db.py
